# mykytaso-v3

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: asgi.py  settings.py  urls.py  wsgi.py
comments/: admin.py  models.py  views.py
comments/migrations/: 0001_initial.py  0002_remove_comment_comments_user_id_8613ff_idx_and_more.py
frontend/html/: index.html  layout.html
frontend/html/comments/: comment.html  comment_form.html
frontend/html/includes/: favicon.html  footer.html  message_form.html  navbar.html  scripts.html  styles.html
frontend/html/posts/: about_me.html  divider.html  like_button.html  post_create_update.html  post_list.html  post_retrieve.html  post_update.html
frontend/html/posts/partials/: like_button.html
frontend/html/users/: login.html  password_change.html  password_reset_request.html  password_reset_set_new.html  register.html  resend_verification.html  user_profile.html  user_profile_update.html
frontend/static/css/: base.css  cards.css  comments.css  fontawesome.css  fonts.css  forms.css  layout.css  post.css  theme.css
frontend/static/js/: main.js
likes/: admin.py  models.py  views.py
likes/migrations/: 0001_initial.py  0002_initial.py
markdown/: markdown.py  renderer.py
markdown/plugins/: caption_plugin.py
posts/: admin.py  forms.py  models.py  views.py
posts/migrations/: 0001_initial.py  0002_post_view_count.py  0002_remove_post_html_cache_remove_post_is_commentable_and_more.py  0003_post_html_cache_post_slug_alter_post_text.py  0003_post_is_visible_post_published_at.py  0004_alter_post_cover_image.py  0004_post_is_raw_html_alter_post_slug.py  0005_alter_post_is_visible.py
posts/templatetags/: post_filters.py  posts.py
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions.py  0002_user_pending_email.py  0003_user_deleted_at_user_is_deleted.py
utils/: email.py  send_verification_email.html  slug.py  strings.py
utils/email_templates/: password_reset_email.html  password_reset_email.txt  verification_email.html  verification_email.txt
